Mit Colab erstellt

--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "45f4af51",
       "metadata": {
         "id": "45f4af51",
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "8140ee3f",
       "metadata": {
         "id": "8140ee3f"
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "335ff8ba",
       "metadata": {
         "id": "335ff8ba"
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "e42f54c4",
       "metadata": {
         "id": "e42f54c4"
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "f345ba96",
       "metadata": {
         "id": "f345ba96"
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "e729786d",
       "metadata": {
         "id": "e729786d"
@@ -311,12 +311,14 @@
         "        labels = torch.zeros(logits.size(0), dtype=torch.long, device=z_i.device)  # positives at index 0\n",
         "\n",
         "        loss = F.cross_entropy(logits, labels)\n",
-        "        return loss\n"
+        "        loss_i2t = F.cross_entropy(logits, labels)\n",
+        "        loss_t2i = F.cross_entropy(logits.t(), labels)\n",
+        "        return 0.5 * (loss_i2t + loss_t2i)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "82f1f386",
       "metadata": {
         "id": "82f1f386"
@@ -339,19 +341,6 @@
         "    W = U @ Vt  # orthogonal map d_text→d_img\n",
         "    return W.T   # shape (d_img, d_text) for nn.Linear weight\n",
         "\n",
-        "# ====== InfoNCE (CLIP-style) loss ======\n",
-        "def info_nce_loss(pred_img_emb, true_img_emb, temperature=0.07):\n",
-        "    \"\"\"\n",
-        "    pred_img_emb: (B, D)\n",
-        "    true_img_emb: (B, D)\n",
-        "    \"\"\"\n",
-        "    zt = F.normalize(pred_img_emb, dim=1)\n",
-        "    zi = F.normalize(true_img_emb, dim=1)\n",
-        "    logits = zt @ zi.t() / temperature\n",
-        "    labels = torch.arange(len(zt), device=zt.device)\n",
-        "    loss_i2t = F.cross_entropy(logits, labels)\n",
-        "    loss_t2i = F.cross_entropy(logits.t(), labels)\n",
-        "    return 0.5 * (loss_i2t + loss_t2i)\n",
         "\n",
         "def apply_procrustes_init_to_final(model, text_sample, img_sample):\n",
         "    \"\"\"\n",
@@ -396,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "e7b2b396",
       "metadata": {
         "id": "e7b2b396"
@@ -494,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "fe1a3e15",
       "metadata": {
         "id": "fe1a3e15",
@@ -527,6 +516,7 @@
         "# 4. Data Augmentation\n",
         "# 5. Zero Shot Stitching\n",
         "# 6. Diffusion Priors\n",
+        "# 7. Autoencoder\n",
         "# Configuration\n",
         "EPOCHS = 60\n",
         "BATCH_SIZE = 512\n",
@@ -566,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "f45828c5",
       "metadata": {
         "id": "f45828c5",
@@ -601,7 +591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "b46d6b64",
       "metadata": {
         "id": "b46d6b64"
@@ -842,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "204d7a49",
       "metadata": {
         "id": "204d7a49",
@@ -1361,7 +1351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "cff97f7b",
       "metadata": {
         "id": "cff97f7b",
