Mit Colab erstellt

--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -515,7 +515,7 @@
       "source": [
         "# 4. Data Augmentation\n",
         "# 5. Zero Shot Stitching\n",
-        "# 6. Diffusion Priors\n",
+        "# 6. Triplet Loss / Improve InfoNCE Loss\n",
         "# 7. Autoencoder\n",
         "# Configuration\n",
         "EPOCHS = 60\n",
