--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -22,11 +22,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "45f4af51",
       "metadata": {
         "id": "45f4af51",
-        "outputId": "4a33dcbf-fbb4-4bfe-ee76-de8f54097759",
+        "outputId": "6986b255-47c0-446d-d3f4-64c21004bc54",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -37,7 +37,18 @@
           "name": "stdout",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "fatal: destination path 'challenge' already exists and is not an empty directory.\n"
+            "fatal: destination path 'challenge' already exists and is not an empty directory.\n",
+            "--2025-11-11 15:15:16--  https://raw.githubusercontent.com/tam4x/aml_challenge/dac7ecf90d05ea8c77c851ea932a569c1cd4fc99/preprocess_data.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 7062 (6.9K) [text/plain]\n",
+            "Saving to: ‘preprocess_data.py’\n",
+            "\n",
+            "preprocess_data.py  100%[===================>]   6.90K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2025-11-11 15:15:16 (107 MB/s) - ‘preprocess_data.py’ saved [7062/7062]\n",
+            "\n"
           ]
         }
       ],
@@ -49,12 +60,13 @@
         "#!unzip -o train.zip -d data\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "!git clone https://github.com/Mamiglia/challenge.git"
+        "!git clone https://github.com/Mamiglia/challenge.git\n",
+        "!wget https://raw.githubusercontent.com/tam4x/aml_challenge/dac7ecf90d05ea8c77c851ea932a569c1cd4fc99/preprocess_data.py"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "id": "8140ee3f",
       "metadata": {
         "id": "8140ee3f"
@@ -73,6 +85,61 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!python preprocess_data.py drive/MyDrive/data/train"
+      ],
+      "metadata": {
+        "id": "l1XGOxm-fGYn",
+        "outputId": "e54562b7-1adc-4173-e3d6-d15ebd403ad1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "l1XGOxm-fGYn",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2025-11-11 15:15:52.327417: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+            "E0000 00:00:1762874152.347221   10065 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1762874152.353177   10065 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "W0000 00:00:1762874152.370134   10065 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762874152.370158   10065 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762874152.370163   10065 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762874152.370167   10065 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "2025-11-11 15:15:52.375357: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "Using device: cuda\n",
+            "Loading text model: sentence-transformers/roberta-large-nli-stsb-mean-tokens\n",
+            "Loading image model: facebook/dinov2-giant\n",
+            "Loading dataset from: drive/MyDrive/data/train\n",
+            "Found 25000 images and 125000 total captions.\n",
+            "Processing 25000 images in batches...\n",
+            "Encoding augmented images:   0% 35/25000 [00:25<5:05:25,  1.36it/s]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/preprocess_data.py\", line 186, in <module>\n",
+            "    main()\n",
+            "  File \"/content/preprocess_data.py\", line 183, in main\n",
+            "    create_data_file(args.input_folder, args.output_file, args.device, args)\n",
+            "  File \"/content/preprocess_data.py\", line 130, in create_data_file\n",
+            "    all_images, img_embd = process_images_batch(image_processor, \n",
+            "                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/_contextlib.py\", line 120, in decorate_context\n",
+            "    return func(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/preprocess_data.py\", line 71, in process_images_batch\n",
+            "    emb = outputs.last_hidden_state.mean(dim=1).cpu().numpy()\n",
+            "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "KeyboardInterrupt\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "e582da8c",
       "metadata": {
@@ -84,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "335ff8ba",
       "metadata": {
         "id": "335ff8ba"
@@ -123,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "e42f54c4",
       "metadata": {
         "id": "e42f54c4"
@@ -178,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "f345ba96",
       "metadata": {
         "id": "f345ba96"
@@ -250,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "e729786d",
       "metadata": {
         "id": "e729786d"
@@ -316,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "82f1f386",
       "metadata": {
         "id": "82f1f386"
@@ -383,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "e7b2b396",
       "metadata": {
         "id": "e7b2b396"
@@ -483,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "fe1a3e15",
       "metadata": {
         "id": "fe1a3e15",
@@ -555,7 +622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "f45828c5",
       "metadata": {
         "id": "f45828c5",
@@ -590,7 +657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "b46d6b64",
       "metadata": {
         "id": "b46d6b64"
@@ -721,7 +788,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "dc8d430c",
       "metadata": {
         "id": "dc8d430c",
@@ -1096,12 +1163,12 @@
         "id": "p0_hDfyGIngh"
       },
       "id": "p0_hDfyGIngh",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "204d7a49",
       "metadata": {
         "id": "204d7a49",
@@ -2037,7 +2104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "cff97f7b",
       "metadata": {
         "id": "cff97f7b",
