Mit Colab erstellt

--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -22,11 +22,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "id": "45f4af51",
       "metadata": {
         "id": "45f4af51",
-        "outputId": "6986b255-47c0-446d-d3f4-64c21004bc54",
+        "outputId": "d97f6b04-c48f-49f5-ebdd-479d5b86a596",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -38,16 +38,16 @@
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
             "fatal: destination path 'challenge' already exists and is not an empty directory.\n",
-            "--2025-11-11 15:15:16--  https://raw.githubusercontent.com/tam4x/aml_challenge/dac7ecf90d05ea8c77c851ea932a569c1cd4fc99/preprocess_data.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2025-11-11 15:21:41--  https://raw.githubusercontent.com/tam4x/aml_challenge/refs/heads/main/preprocess_data.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 7062 (6.9K) [text/plain]\n",
+            "Length: 7115 (6.9K) [text/plain]\n",
             "Saving to: ‘preprocess_data.py’\n",
             "\n",
-            "preprocess_data.py  100%[===================>]   6.90K  --.-KB/s    in 0s      \n",
+            "preprocess_data.py  100%[===================>]   6.95K  --.-KB/s    in 0s      \n",
             "\n",
-            "2025-11-11 15:15:16 (107 MB/s) - ‘preprocess_data.py’ saved [7062/7062]\n",
+            "2025-11-11 15:21:41 (82.1 MB/s) - ‘preprocess_data.py’ saved [7115/7115]\n",
             "\n"
           ]
         }
@@ -61,12 +61,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "!git clone https://github.com/Mamiglia/challenge.git\n",
-        "!wget https://raw.githubusercontent.com/tam4x/aml_challenge/dac7ecf90d05ea8c77c851ea932a569c1cd4fc99/preprocess_data.py"
+        "!wget https://raw.githubusercontent.com/tam4x/aml_challenge/refs/heads/main/preprocess_data.py\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "id": "8140ee3f",
       "metadata": {
         "id": "8140ee3f"
@@ -87,54 +87,39 @@
     {
       "cell_type": "code",
       "source": [
-        "!python preprocess_data.py drive/MyDrive/data/train"
+        "!python preprocess_data.py drive/MyDrive/data/train --device=cuda --output-file=drive/MyDrive/data/augmented_data.npz"
       ],
       "metadata": {
         "id": "l1XGOxm-fGYn",
-        "outputId": "e54562b7-1adc-4173-e3d6-d15ebd403ad1",
+        "outputId": "75610513-155e-4111-b400-988fbe58e45e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "l1XGOxm-fGYn",
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2025-11-11 15:15:52.327417: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2025-11-11 18:24:23.060746: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
             "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1762874152.347221   10065 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1762874152.353177   10065 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "W0000 00:00:1762874152.370134   10065 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762874152.370158   10065 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762874152.370163   10065 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762874152.370167   10065 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "2025-11-11 15:15:52.375357: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "E0000 00:00:1762885463.081173   58263 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1762885463.087390   58263 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "W0000 00:00:1762885463.103048   58263 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762885463.103074   58263 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762885463.103078   58263 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762885463.103082   58263 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "2025-11-11 18:24:23.107666: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
             "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
             "Using device: cuda\n",
+            "Loading dataset from: drive/MyDrive/data/train\n",
             "Loading text model: sentence-transformers/roberta-large-nli-stsb-mean-tokens\n",
             "Loading image model: facebook/dinov2-giant\n",
-            "Loading dataset from: drive/MyDrive/data/train\n",
             "Found 25000 images and 125000 total captions.\n",
             "Processing 25000 images in batches...\n",
-            "Encoding augmented images:   0% 35/25000 [00:25<5:05:25,  1.36it/s]\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/content/preprocess_data.py\", line 186, in <module>\n",
-            "    main()\n",
-            "  File \"/content/preprocess_data.py\", line 183, in main\n",
-            "    create_data_file(args.input_folder, args.output_file, args.device, args)\n",
-            "  File \"/content/preprocess_data.py\", line 130, in create_data_file\n",
-            "    all_images, img_embd = process_images_batch(image_processor, \n",
-            "                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/_contextlib.py\", line 120, in decorate_context\n",
-            "    return func(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/preprocess_data.py\", line 71, in process_images_batch\n",
-            "    emb = outputs.last_hidden_state.mean(dim=1).cpu().numpy()\n",
-            "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "KeyboardInterrupt\n"
+            "Augmenting Images:  67% 16758/25000 [17:08<118:49:51, 51.90s/it]^C\n"
           ]
         }
       ]
@@ -550,11 +535,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "fe1a3e15",
       "metadata": {
         "id": "fe1a3e15",
-        "outputId": "06bc32cb-7256-4d2d-e5ed-e98addf94251",
+        "outputId": "a0314267-b88c-43fc-f0dd-ff923381c70b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -564,19 +549,19 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(125000,)\n",
-            "Train data: 125000 captions, 125000 images\n"
+            "(150,)\n",
+            "Train data: 150 captions, 150 images\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(torch.Size([112500, 1536]), torch.Size([112500, 1024]), 512, 512)"
+              "(torch.Size([135, 1536]), torch.Size([135, 1024]), 512, 512)"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 17
         }
       ],
       "source": [
@@ -590,7 +575,8 @@
         "LR = 0.001\n",
         "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "# Load data\n",
-        "train_data = load_data(\"drive/MyDrive/data/train/train.npz\")\n",
+        "#train_data = load_data(\"drive/MyDrive/data/train/train.npz\")\n",
+        "train_data = load_data('processed_augmented_data.npz')\n",
         "X, y, label = prepare_train_data(train_data)\n",
         "DATASET_SIZE = len(X)\n",
         "# Split train/val\n",
