Mit Colab erstellt

--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "id": "8140ee3f",
       "metadata": {
         "id": "8140ee3f"
@@ -91,35 +91,95 @@
       ],
       "metadata": {
         "id": "l1XGOxm-fGYn",
-        "outputId": "75610513-155e-4111-b400-988fbe58e45e",
+        "outputId": "550885a5-4592-4627-fe0b-575fa91e1818",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "l1XGOxm-fGYn",
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2025-11-11 18:24:23.060746: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2025-11-11 19:48:21.607629: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
             "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1762885463.081173   58263 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1762885463.087390   58263 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "W0000 00:00:1762885463.103048   58263 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762885463.103074   58263 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762885463.103078   58263 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762885463.103082   58263 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "2025-11-11 18:24:23.107666: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "E0000 00:00:1762890501.628157   79261 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1762890501.634217   79261 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "W0000 00:00:1762890501.649075   79261 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762890501.649100   79261 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762890501.649104   79261 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762890501.649107   79261 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "2025-11-11 19:48:21.653777: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
             "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
             "Using device: cuda\n",
             "Loading dataset from: drive/MyDrive/data/train\n",
             "Loading text model: sentence-transformers/roberta-large-nli-stsb-mean-tokens\n",
             "Loading image model: facebook/dinov2-giant\n",
             "Found 25000 images and 125000 total captions.\n",
-            "Processing 25000 images in batches...\n",
-            "Augmenting Images:  67% 16758/25000 [17:08<118:49:51, 51.90s/it]^C\n"
+            "Processing 128 images in batches...\n",
+            "Encoding images:   0% 0/1 [00:08<?, ?it/s]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/preprocess_data.py\", line 212, in <module>\n",
+            "    main()\n",
+            "  File \"/content/preprocess_data.py\", line 209, in main\n",
+            "    create_data_file(args.input_folder, args.output_file, args.device, args)\n",
+            "  File \"/content/preprocess_data.py\", line 149, in create_data_file\n",
+            "    all_images, img_embd = process_images_batch(image_processor, \n",
+            "                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/_contextlib.py\", line 120, in decorate_context\n",
+            "    return func(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/preprocess_data.py\", line 85, in process_images_batch\n",
+            "    outputs = model(**inputs)\n",
+            "              ^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1773, in _wrapped_call_impl\n",
+            "    return self._call_impl(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1784, in _call_impl\n",
+            "    return forward_call(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/utils/generic.py\", line 1064, in wrapper\n",
+            "    outputs = func(self, *args, **kwargs)\n",
+            "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/dinov2/modeling_dinov2.py\", line 534, in forward\n",
+            "    encoder_outputs: BaseModelOutput = self.encoder(\n",
+            "                                       ^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1773, in _wrapped_call_impl\n",
+            "    return self._call_impl(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1784, in _call_impl\n",
+            "    return forward_call(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/dinov2/modeling_dinov2.py\", line 422, in forward\n",
+            "    hidden_states = layer_module(hidden_states, layer_head_mask)\n",
+            "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/modeling_layers.py\", line 94, in __call__\n",
+            "    return super().__call__(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1773, in _wrapped_call_impl\n",
+            "    return self._call_impl(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1784, in _call_impl\n",
+            "    return forward_call(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/dinov2/modeling_dinov2.py\", line 400, in forward\n",
+            "    layer_output = self.mlp(layer_output)\n",
+            "                   ^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1773, in _wrapped_call_impl\n",
+            "    return self._call_impl(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1784, in _call_impl\n",
+            "    return forward_call(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/dinov2/modeling_dinov2.py\", line 363, in forward\n",
+            "    hidden = nn.functional.silu(x1) * x2\n",
+            "             ^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/functional.py\", line 2375, in silu\n",
+            "    return torch._C._nn.silu(input)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "torch.OutOfMemoryError: CUDA out of memory. Tried to allocate 2.01 GiB. GPU 0 has a total capacity of 14.74 GiB of which 826.12 MiB is free. Process 1028904 has 13.93 GiB memory in use. Of the allocated memory 13.64 GiB is allocated by PyTorch, and 172.95 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True to avoid fragmentation.  See documentation for Memory Management  (https://pytorch.org/docs/stable/notes/cuda.html#environment-variables)\n"
           ]
         }
       ]
