Mit Colab erstellt

--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -22,11 +22,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "id": "45f4af51",
       "metadata": {
         "id": "45f4af51",
-        "outputId": "d97f6b04-c48f-49f5-ebdd-479d5b86a596",
+        "outputId": "a2d224a1-1404-4bdf-e3ce-63bf4980999d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -36,18 +36,24 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "fatal: destination path 'challenge' already exists and is not an empty directory.\n",
-            "--2025-11-11 15:21:41--  https://raw.githubusercontent.com/tam4x/aml_challenge/refs/heads/main/preprocess_data.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "Mounted at /content/drive\n",
+            "Cloning into 'challenge'...\n",
+            "remote: Enumerating objects: 98, done.\u001b[K\n",
+            "remote: Counting objects: 100% (98/98), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (69/69), done.\u001b[K\n",
+            "remote: Total 98 (delta 39), reused 72 (delta 26), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (98/98), 21.03 MiB | 22.26 MiB/s, done.\n",
+            "Resolving deltas: 100% (39/39), done.\n",
+            "--2025-11-12 08:02:08--  https://raw.githubusercontent.com/tam4x/aml_challenge/refs/heads/main/preprocess_data.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 7115 (6.9K) [text/plain]\n",
+            "Length: 8066 (7.9K) [text/plain]\n",
             "Saving to: ‘preprocess_data.py’\n",
             "\n",
-            "preprocess_data.py  100%[===================>]   6.95K  --.-KB/s    in 0s      \n",
+            "preprocess_data.py  100%[===================>]   7.88K  --.-KB/s    in 0.001s  \n",
             "\n",
-            "2025-11-11 15:21:41 (82.1 MB/s) - ‘preprocess_data.py’ saved [7115/7115]\n",
+            "2025-11-12 08:02:08 (10.9 MB/s) - ‘preprocess_data.py’ saved [8066/8066]\n",
             "\n"
           ]
         }
@@ -66,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "8140ee3f",
       "metadata": {
         "id": "8140ee3f"
@@ -87,99 +93,40 @@
     {
       "cell_type": "code",
       "source": [
-        "!python preprocess_data.py drive/MyDrive/data/train --device=cuda --output-file=drive/MyDrive/data/augmented_data.npz"
+        "!python preprocess_data.py drive/MyDrive/data/train --device=cuda --output-file=drive/MyDrive/data/augmented_data.npz --num-augmentations=4"
       ],
       "metadata": {
         "id": "l1XGOxm-fGYn",
-        "outputId": "550885a5-4592-4627-fe0b-575fa91e1818",
+        "outputId": "1dfc84bb-4bb8-45d4-a870-eb0cd13a08ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "l1XGOxm-fGYn",
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2025-11-11 19:48:21.607629: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2025-11-12 11:40:56.335796: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+            "2025-11-12 11:40:56.353596: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
             "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1762890501.628157   79261 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1762890501.634217   79261 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "W0000 00:00:1762890501.649075   79261 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762890501.649100   79261 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762890501.649104   79261 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762890501.649107   79261 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "2025-11-11 19:48:21.653777: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "E0000 00:00:1762947656.374791   56154 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1762947656.381327   56154 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "W0000 00:00:1762947656.397661   56154 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762947656.397687   56154 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762947656.397690   56154 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1762947656.397692   56154 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "2025-11-12 11:40:56.402524: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
             "Using device: cuda\n",
             "Loading dataset from: drive/MyDrive/data/train\n",
             "Loading text model: sentence-transformers/roberta-large-nli-stsb-mean-tokens\n",
             "Loading image model: facebook/dinov2-giant\n",
             "Found 25000 images and 125000 total captions.\n",
-            "Processing 128 images in batches...\n",
-            "Encoding images:   0% 0/1 [00:08<?, ?it/s]\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/content/preprocess_data.py\", line 212, in <module>\n",
-            "    main()\n",
-            "  File \"/content/preprocess_data.py\", line 209, in main\n",
-            "    create_data_file(args.input_folder, args.output_file, args.device, args)\n",
-            "  File \"/content/preprocess_data.py\", line 149, in create_data_file\n",
-            "    all_images, img_embd = process_images_batch(image_processor, \n",
-            "                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/_contextlib.py\", line 120, in decorate_context\n",
-            "    return func(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/preprocess_data.py\", line 85, in process_images_batch\n",
-            "    outputs = model(**inputs)\n",
-            "              ^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1773, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1784, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/utils/generic.py\", line 1064, in wrapper\n",
-            "    outputs = func(self, *args, **kwargs)\n",
-            "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/dinov2/modeling_dinov2.py\", line 534, in forward\n",
-            "    encoder_outputs: BaseModelOutput = self.encoder(\n",
-            "                                       ^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1773, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1784, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/dinov2/modeling_dinov2.py\", line 422, in forward\n",
-            "    hidden_states = layer_module(hidden_states, layer_head_mask)\n",
-            "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/modeling_layers.py\", line 94, in __call__\n",
-            "    return super().__call__(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1773, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1784, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/dinov2/modeling_dinov2.py\", line 400, in forward\n",
-            "    layer_output = self.mlp(layer_output)\n",
-            "                   ^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1773, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\", line 1784, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/dinov2/modeling_dinov2.py\", line 363, in forward\n",
-            "    hidden = nn.functional.silu(x1) * x2\n",
-            "             ^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/nn/functional.py\", line 2375, in silu\n",
-            "    return torch._C._nn.silu(input)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "torch.OutOfMemoryError: CUDA out of memory. Tried to allocate 2.01 GiB. GPU 0 has a total capacity of 14.74 GiB of which 826.12 MiB is free. Process 1028904 has 13.93 GiB memory in use. Of the allocated memory 13.64 GiB is allocated by PyTorch, and 172.95 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True to avoid fragmentation.  See documentation for Memory Management  (https://pytorch.org/docs/stable/notes/cuda.html#environment-variables)\n"
+            "Processing 25000 images in batches...\n",
+            "Encoding images:   0% 0/196 [00:00<?, ?it/s]^C\n"
           ]
         }
       ]
@@ -595,7 +542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "fe1a3e15",
       "metadata": {
         "id": "fe1a3e15",
@@ -2201,7 +2148,7 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "A100"
     },
     "kernelspec": {
       "name": "python3",
