--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -26,7 +26,7 @@
       "id": "45f4af51",
       "metadata": {
         "id": "45f4af51",
-        "outputId": "a530f44d-f699-4dea-943e-da1f2ba810bb",
+        "outputId": "089e7d97-4b26-40ae-b8a2-1825d6c64141",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -42,9 +42,9 @@
             "remote: Counting objects: 100% (98/98), done.\u001b[K\n",
             "remote: Compressing objects: 100% (69/69), done.\u001b[K\n",
             "remote: Total 98 (delta 39), reused 72 (delta 26), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (98/98), 21.03 MiB | 16.43 MiB/s, done.\n",
+            "Receiving objects: 100% (98/98), 21.03 MiB | 20.45 MiB/s, done.\n",
             "Resolving deltas: 100% (39/39), done.\n",
-            "--2025-11-12 14:13:24--  https://raw.githubusercontent.com/tam4x/aml_challenge/refs/heads/main/preprocess_data.py\n",
+            "--2025-11-12 19:46:57--  https://raw.githubusercontent.com/tam4x/aml_challenge/refs/heads/main/preprocess_data.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -53,7 +53,7 @@
             "\n",
             "preprocess_data.py  100%[===================>]   7.88K  --.-KB/s    in 0s      \n",
             "\n",
-            "2025-11-12 14:13:25 (110 MB/s) - ‘preprocess_data.py’ saved [8066/8066]\n",
+            "2025-11-12 19:46:57 (117 MB/s) - ‘preprocess_data.py’ saved [8066/8066]\n",
             "\n"
           ]
         }
@@ -93,43 +93,241 @@
     {
       "cell_type": "code",
       "source": [
-        "!python preprocess_data.py drive/MyDrive/data/train --device=cuda --output-file=drive/MyDrive/data/augmented_data.npz --num-augmentations=4"
+        "import argparse\n",
+        "from PIL import Image\n",
+        "import torch\n",
+        "from sentence_transformers import SentenceTransformer\n",
+        "from transformers import AutoImageProcessor, AutoModel\n",
+        "from tqdm import tqdm\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from pathlib import Path\n",
+        "from torchvision import transforms\n",
+        "import random\n",
+        "# roberta-large-nli-stsb-mean-tokens\n",
+        "def load_text_model(model_name=\"sentence-transformers/roberta-large-nli-stsb-mean-tokens\"):\n",
+        "    \"\"\"Load Sentence-BERT text encoder.\"\"\"\n",
+        "    print(f\"Loading text model: {model_name}\")\n",
+        "    return SentenceTransformer(model_name)\n",
+        "\n",
+        "\n",
+        "def load_image_model(model_name=\"facebook/dinov2-giant\"):\n",
+        "    \"\"\"Load DINOv2 image encoder.\"\"\"\n",
+        "    print(f\"Loading image model: {model_name}\")\n",
+        "    image_processor = AutoImageProcessor.from_pretrained(model_name, use_fast=True)\n",
+        "    model = AutoModel.from_pretrained(model_name)\n",
+        "    return image_processor, model\n",
+        "\n",
+        "## Can be modified for data augmentation if needed or create my one\n",
+        "def get_augmentations(num_augmentations=3):\n",
+        "    \"\"\"Create a list of augmentation pipelines (light + heavy mix).\"\"\"\n",
+        "    light = transforms.Compose([\n",
+        "        transforms.RandomResizedCrop(224, scale=(0.9, 1.0)),\n",
+        "        transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2),\n",
+        "        transforms.RandomHorizontalFlip(),\n",
+        "    ])\n",
+        "\n",
+        "    heavy = transforms.Compose([\n",
+        "        transforms.RandomResizedCrop(224, scale=(0.5, 1.0)),\n",
+        "        transforms.ColorJitter(brightness=0.4, contrast=0.4, saturation=0.4, hue=0.1),\n",
+        "        transforms.RandomGrayscale(p=0.2),\n",
+        "        transforms.GaussianBlur(kernel_size=3, sigma=(0.1, 2.0)),\n",
+        "        transforms.RandomHorizontalFlip(),\n",
+        "    ])\n",
+        "\n",
+        "    augs = []\n",
+        "    for _ in range(num_augmentations):\n",
+        "        augs.append(random.choice([light, heavy]))\n",
+        "    return augs\n",
+        "\n",
+        "@torch.inference_mode()\n",
+        "def process_images_batch(image_processor, model, image_paths, device, batch_size=128, dataset_path=None, augmentations=3):\n",
+        "    \"\"\"Generate image embeddings in batches.\"\"\"\n",
+        "    print(f\"Processing {len(image_paths)} images in batches...\")\n",
+        "    model.to(device)\n",
+        "    model.eval()\n",
+        "\n",
+        "    all_embeddings = []\n",
+        "    all_names = []\n",
+        "    img_files = []\n",
+        "    augs = get_augmentations(augmentations)\n",
+        "    all_images = []\n",
+        "\n",
+        "    for i in tqdm(range(0, len(image_paths), batch_size), desc=\"Encoding images\"):\n",
+        "        batch_paths = image_paths[i:i+batch_size]\n",
+        "        valid_images = []\n",
+        "\n",
+        "        # Keep track of which original indices correspond to valid images in the batch\n",
+        "        valid_paths = []\n",
+        "\n",
+        "        for j, path in enumerate(batch_paths):\n",
+        "            original_index = i + j\n",
+        "            try:\n",
+        "                img = Image.open(dataset_path / 'Images' / path).convert(\"RGB\")\n",
+        "                valid_images.append(img)\n",
+        "                valid_paths.append(path)\n",
+        "                for k, aug in enumerate(augs):\n",
+        "                  aug_img = aug(img)\n",
+        "                  valid_images.append(aug_img)\n",
+        "                  valid_paths.append(f\"{path}_aug{k+1}\")\n",
+        "            except Exception as e:\n",
+        "                print(f\"Warning: Skipping image {path} due to error: {e}\")\n",
+        "\n",
+        "        if not valid_images:\n",
+        "            continue\n",
+        "\n",
+        "        inputs = image_processor(images=valid_images, return_tensors=\"pt\").to(device)\n",
+        "        outputs = model(**inputs)\n",
+        "\n",
+        "        # Average over patch tokens\n",
+        "        image_features = outputs.last_hidden_state.mean(dim=1).cpu().numpy()\n",
+        "\n",
+        "        # Store embeddings based on their success\n",
+        "        all_embeddings.extend(image_features)\n",
+        "        img_files.extend(valid_paths)\n",
+        "\n",
+        "    all_embeddings = np.vstack(all_embeddings)\n",
+        "\n",
+        "    return all_names, all_embeddings\n",
+        "\n",
+        "\n",
+        "def process_captions(text_model, captions, device):\n",
+        "    \"\"\"Generate text embeddings using Sentence-BERT.\"\"\"\n",
+        "    print(\"Processing captions...\")\n",
+        "    return text_model.encode(\n",
+        "        captions,\n",
+        "        convert_to_numpy=True,\n",
+        "        show_progress_bar=True,\n",
+        "        device=device\n",
+        "    )\n",
+        "\n",
+        "def load_dataset(dataset_path):\n",
+        "    \"\"\"\n",
+        "    Load dataset from a directory containing captions.txt and an Images folder.\n",
+        "    \"\"\"\n",
+        "    captions_file = dataset_path / \"captions.txt\"\n",
+        "    images_dir = dataset_path / \"Images\"\n",
+        "    if not captions_file.exists() or not images_dir.is_dir():\n",
+        "        raise FileNotFoundError(f\"Could not find 'captions.txt' or 'Images' directory in {dataset_path}\")\n",
+        "\n",
+        "    df = pd.read_csv(captions_file)\n",
+        "\n",
+        "    if 'id' not in df.columns:\n",
+        "        df['id'] = np.arange(len(df))\n",
+        "\n",
+        "    return df\n",
+        "\n",
+        "num_augmentations = 4\n",
+        "dataset_path = Path('drive/MyDrive/data/train/')\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "output_file = 'drive/MyDrive/data/augmented_testdata.npz'\n",
+        "print(f\"Using device: {device}\")\n",
+        "\n",
+        "print(f\"Loading dataset from: {dataset_path}\")\n",
+        "df_captions = load_dataset(dataset_path)\n",
+        "\n",
+        "text_model = load_text_model()\n",
+        "image_processor, image_model = load_image_model()\n",
+        "\n",
+        "all_captions = df_captions['caption'].tolist()\n",
+        "caption2img = df_captions['image'].tolist()\n",
+        "all_images = df_captions['image'].unique().tolist()\n",
+        "\n",
+        "num_images = len(all_images)\n",
+        "num_captions = len(all_captions)\n",
+        "print(f\"Found {num_images} images and {num_captions} total captions.\")\n",
+        "\n",
+        "all_images, img_embd = process_images_batch(image_processor,\n",
+        "                                            image_model,\n",
+        "                                            all_images,\n",
+        "                                            device,\n",
+        "                                            dataset_path=dataset_path, augmentations=num_augmentations)\n",
+        "\n",
+        "images_dict = {img_name: i for i, img_name in enumerate(all_images)}\n"
       ],
       "metadata": {
-        "id": "l1XGOxm-fGYn",
-        "outputId": "1dfc84bb-4bb8-45d4-a870-eb0cd13a08ae",
+        "id": "4NlYDhMIm8ht",
+        "outputId": "a23bbc45-9c63-42e1-c25f-b3acceb932f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "id": "l1XGOxm-fGYn",
+      "id": "4NlYDhMIm8ht",
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2025-11-12 11:40:56.335796: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-            "2025-11-12 11:40:56.353596: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1762947656.374791   56154 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1762947656.381327   56154 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "W0000 00:00:1762947656.397661   56154 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762947656.397687   56154 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762947656.397690   56154 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "W0000 00:00:1762947656.397692   56154 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-            "2025-11-12 11:40:56.402524: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
             "Using device: cuda\n",
             "Loading dataset from: drive/MyDrive/data/train\n",
             "Loading text model: sentence-transformers/roberta-large-nli-stsb-mean-tokens\n",
             "Loading image model: facebook/dinov2-giant\n",
             "Found 25000 images and 125000 total captions.\n",
-            "Processing 25000 images in batches...\n",
-            "Encoding images:   0% 0/196 [00:00<?, ?it/s]^C\n"
+            "Processing 128 images in batches...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rEncoding images:   0%|          | 0/1 [00:00<?, ?it/s]"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Duplicate captions per image *and* per augmentation\n",
+        "repeated_captions = []\n",
+        "repeated_imgnames = []\n",
+        "num_captions_per_image = 5\n",
+        "num_versions_per_image = 1 + num_augmentations  # original + 3 augmentations\n",
+        "\n",
+        "for i in range(0, len(all_images), num_versions_per_image):\n",
+        "    image_group = all_images[i : i + num_versions_per_image]\n",
+        "    for j in range(num_captions_per_image):\n",
+        "        caption = all_captions[(i // num_versions_per_image) * num_captions_per_image + j]\n",
+        "        for img_variant in image_group:\n",
+        "            repeated_captions.append(caption)\n",
+        "            repeated_imgnames.append(img_variant)\n",
+        "\n",
+        "\n",
+        "print(len(repeated_captions), len((repeated_imgnames)))\n",
+        "caption_embeddings = process_captions(text_model, repeated_captions, device)\n",
+        "\n",
+        "num_images = len(all_images)\n",
+        "num_captions = len(repeated_captions)\n",
+        "\n",
+        "label = np.zeros((num_captions, num_images), dtype=bool)\n",
+        "image_idx_map = {name: i for i, name in enumerate(all_images)}\n",
+        "for idx, img_name in enumerate(repeated_imgnames):\n",
+        "    if img_name in image_idx_map:\n",
+        "        label[idx, image_idx_map[img_name]] = 1\n",
+        "\n",
+        "data = {\n",
+        "    'metadata/num_captions': np.array([num_captions]),\n",
+        "    'metadata/num_images': np.array([num_images]),\n",
+        "    'metadata/embedding_dim_text': np.array([caption_embeddings.shape[1]]),\n",
+        "    'metadata/embedding_dim_image': np.array([img_embd.shape[1]]),\n",
+        "    'captions/text': np.array(repeated_captions),\n",
+        "    'captions/embeddings': caption_embeddings,\n",
+        "    'captions/label': label,\n",
+        "    'images/names': np.array(all_images),\n",
+        "    'images/embeddings': img_embd,\n",
+        "}\n",
+        "\n",
+        "print(f\"Saving augmented dataset to {output_file}\")\n",
+        "np.savez_compressed(output_file, **data)\n",
+        "print(\"✓ Done.\")"
+      ],
+      "metadata": {
+        "id": "D9G7nS-tn4HG"
+      },
+      "id": "D9G7nS-tn4HG",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -143,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "335ff8ba",
       "metadata": {
         "id": "335ff8ba"
@@ -182,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "e42f54c4",
       "metadata": {
         "id": "e42f54c4"
@@ -237,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "f345ba96",
       "metadata": {
         "id": "f345ba96"
@@ -309,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "e729786d",
       "metadata": {
         "id": "e729786d"
@@ -375,7 +573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "82f1f386",
       "metadata": {
         "id": "82f1f386"
@@ -442,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "e7b2b396",
       "metadata": {
         "id": "e7b2b396"
@@ -545,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "fe1a3e15",
       "metadata": {
         "id": "fe1a3e15",
@@ -618,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "f45828c5",
       "metadata": {
         "id": "f45828c5",
@@ -795,7 +993,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "dc8d430c",
       "metadata": {
         "id": "dc8d430c",
@@ -1228,12 +1426,12 @@
         "id": "p0_hDfyGIngh"
       },
       "id": "p0_hDfyGIngh",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "204d7a49",
       "metadata": {
         "id": "204d7a49",
@@ -1532,7 +1730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "cff97f7b",
       "metadata": {
         "id": "cff97f7b",
